<resources>
    <string name="app_name">Ping Pong X</string>
    <string name="pingpongx" translatable="false">PingPongX</string>
    <string name="_0" translatable="false">0</string>
    <string name="x" translatable="false">x</string>
    <string name="casa" translatable="false">casa</string>
    <string name="visitante" translatable="false">visitante</string>
    <string name="ponto" translatable="false">ponto</string>
    <string name="terminar_partida" translatable="false">Terminar partida</string>
    <string name="revanche" translatable="false">Revanche</string>
    <string name="reset" translatable="false">Resetar</string>
    <string name="message_to_share" translatable="false">O jogo entre %1$s e %2$s terminou
%3$d a %4$d</string>
    <string name="comecar" translatable="false">COMEÇAR</string>
    <string name="author" translatable="false">Desenvolvido por Shiguemori</string>
    <string name="fill_fields" translatable="false">Preencha todos os campos</string>
    <string name="start_match" translatable="false">Começar a partida</string>
    <string name="ping_pong" translatable="false">Ping Pong</string>
</resources>