<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/pingpongx"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPlayerOneScore"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="72dp"
            android:width="120dp"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textSize="72sp"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:width="120dp"
            android:text="@string/x"
            android:textAlignment="center"
            android:textSize="72sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvPlayerOneScore"
            app:layout_constraintEnd_toStartOf="@+id/tvPlayerTwoScore"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvPlayerOneScore"
            app:layout_constraintTop_toTopOf="@+id/tvPlayerOneScore" />

        <TextView
            android:id="@+id/tvPlayerTwoScore"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:width="120dp"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textSize="72sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/tvPlayerOneName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/casa"
            app:layout_constraintEnd_toEndOf="@+id/tvPlayerOneScore"
            app:layout_constraintStart_toStartOf="@+id/tvPlayerOneScore"
            app:layout_constraintTop_toBottomOf="@+id/tvPlayerOneScore" />

        <TextView
            android:id="@+id/tvPlayerTwoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visitante"
            app:layout_constraintBottom_toBottomOf="@+id/tvPlayerOneName"
            app:layout_constraintEnd_toEndOf="@+id/tvPlayerTwoScore"
            app:layout_constraintStart_toStartOf="@+id/tvPlayerTwoScore"
            app:layout_constraintTop_toTopOf="@+id/tvPlayerOneName" />

        <Button
            android:id="@+id/btPlayerTwoScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ponto"
            app:layout_constraintBottom_toBottomOf="@+id/btPlayerOneScore"
            app:layout_constraintEnd_toEndOf="@+id/tvPlayerTwoScore"
            app:layout_constraintStart_toStartOf="@+id/tvPlayerTwoScore"
            app:layout_constraintTop_toTopOf="@+id/btPlayerOneScore" />

        <Button
            android:id="@+id/btPlayerOneScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/ponto"
            app:layout_constraintEnd_toEndOf="@+id/tvPlayerOneScore"
            app:layout_constraintStart_toStartOf="@+id/tvPlayerOneScore"
            app:layout_constraintTop_toBottomOf="@+id/tvPlayerOneName" />

        <Button
            android:id="@+id/btFinishMatch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/terminar_partida"
            app:layout_constraintEnd_toEndOf="@+id/btPlayerTwoScore"
            app:layout_constraintStart_toStartOf="@+id/btPlayerOneScore"
            app:layout_constraintTop_toBottomOf="@+id/btPlayerOneScore" />

        <Button
            android:id="@+id/btRevenge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/revanche"
            app:layout_constraintEnd_toEndOf="@+id/btFinishMatch"
            app:layout_constraintStart_toStartOf="@+id/btFinishMatch"
            app:layout_constraintTop_toBottomOf="@+id/btFinishMatch" />

        <Button
            android:id="@+id/btReset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/reset"
            app:layout_constraintEnd_toEndOf="@+id/btRevenge"
            app:layout_constraintStart_toStartOf="@+id/btRevenge"
            app:layout_constraintTop_toBottomOf="@+id/btRevenge" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
